# midi_player

./: .gitignore  README.md  pyproject.toml
src/midi_player/: settings.py
src/midi_player/common/: event.py  types.py  utils.py
src/midi_player/entities/: base_entity.py  button_entity.py  text_entity.py
src/midi_player/scenes/: base_scene.py  menu.py  scene_manager.py
src/pialno/: config.json  main.py  settings.py
src/pialno/common/: event.py  types.py  utils.py
src/pialno/entities/: base_entity.py  button_entity.py  keyboard_entity.py  note_entity.py  selector_entity.py  stave_entity.py  text_entity.py
src/pialno/scenes/: game.py  menu.py  options.py  scene_manager.py
